# lokoda-backend

./: .env  .gitignore  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: rust-clippy.yml
configuration/: base.yaml
docs/: backend-api.txt
migrations/: 20211116215800_users.sql  20211116215811_groups.sql  20211221150119_CreateUsersTable.up.sql  20220408201330_UpdateShowDatesViewToAddStatus.up.sql  20220509202524_SearchView.up.sql  20220524190102_CreateGroupTable.up.sql  20220524190141_CreateMessagesTable.up.sql  20220524190202_CreateContactsTable.up.sql  20220902213755_CreateUserMessagesTable.up.sql  20220902213842_AddFieldsToGroups.up.sql
scripts/: curl-addavatar.sh  curl-addembed.sh  curl-addimage.sh  curl-addshow.sh  curl-addsociallink.sh  curl-blockcontact.sh  curl-blockcontacts.sh  curl-deleteavatar.sh  curl-deletecontact.sh  curl-deletecontacts.sh  curl-deleteembed.sh  curl-deletegenre.sh  curl-deletegroup.sh  curl-deleteimage.sh  curl-getcontacts.sh  curl-getgenres.sh  curl-getgenresforprofile.sh  curl-getgroup.sh  curl-getotherprofile.sh  curl-getprofile.sh  curl-getshowsforprofile.sh  curl-getsociallinks.sh  curl-getunread.sh  curl-getusersgroups.sh  curl-getusershows.sh  curl-joingroup.sh  curl-leavegroup.sh  curl-login.sh  curl-newchat.sh  curl-newcontact.sh  curl-newgroup.sh  curl-newmessage.sh  curl-register.sh  curl-resetpassword.sh  curl-search.sh  curl-updatebio.sh  curl-updatepassword.sh  curl-updateprofile.sh  curl-updateuserpassword.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/emails/: mod.rs
src/models/: genre.rs  logindata.rs  messaging.rs  mod.rs  search.rs  shows.rs  users.rs
src/routes/: discover.rs  login.rs  messages.rs  mod.rs  profile.rs  register.rs
tests/: curl-addgenre.rs  curl-getgenres.sh  curl-getusergenres.sh  curl-incorrectlogin.sh  curl-login.sh  curl-register.sh  curl-resetpassword.sh  curl-search.sh  health_check.rs  tests.rs
